--- a/test.html
+++ b/test.html
@@ -1,9 +1,6 @@
 <!doctype html>
 <html>
-    <H1>
-        <p>
-            Hello SungJong
-            Hello KyungMin
-        </p>
-    </H1>
+<head>
+    Hello SungJong
+</head>
 </html>
