--- a/test.html
+++ b/test.html
@@ -1,8 +1,11 @@
 <!doctype html>
 <html>
-<head>
-    Hello SungJong
-</head>
-<body bgcolor="FF33FF">
-</body>
+<h1>
+    BaeKyungMin
+</h1>
+<Ul>
+    <li> PearlAbiss </li>
+    <li> US </li>
+    <li> Netherlands </li>
+</Ul>
 </html>
