--- a/test.html
+++ b/test.html
@@ -6,6 +6,6 @@
 <ol>
     <li> PearlAbiss </li>
     <li> US </li>
-    <li> Netherlands </li>
+    <li> <strong> <u>Netherlands</u> </strong> team </li>
 </ol>
 </html>
